// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch is checked 1`] = `
<div
  aria-hidden="true"
  class="root checked"
  role="presentation"
>
  <input
    checked=""
    class="input"
    readonly=""
    type="checkbox"
  />
  <div
    class="switch checked"
  >
    <span
      class="thumb"
    />
  </div>
</div>
`;

exports[`Switch is disabled 1`] = `
<div
  aria-hidden="true"
  class="root disabled"
  role="presentation"
>
  <input
    class="input"
    disabled=""
    readonly=""
    type="checkbox"
  />
  <div
    class="switch"
  >
    <span
      class="thumb"
    />
  </div>
</div>
`;

exports[`Switch is disabled and renders a label 1`] = `
<div
  aria-hidden="true"
  class="root disabled"
  role="presentation"
>
  <input
    class="input"
    disabled=""
    label="click here"
    readonly=""
    type="checkbox"
  />
  <div
    class="switch"
  >
    <span
      class="thumb"
    />
  </div>
  <label
    class="label"
  >
    click here
  </label>
</div>
`;

exports[`Switch renders correctly 1`] = `
<div
  aria-hidden="true"
  class="root"
  role="presentation"
>
  <input
    class="input"
    readonly=""
    type="checkbox"
  />
  <div
    class="switch"
  >
    <span
      class="thumb"
    />
  </div>
</div>
`;

exports[`Switch renders with label 1`] = `
<div
  aria-hidden="true"
  class="root"
  role="presentation"
>
  <input
    class="input"
    label="click here"
    readonly=""
    type="checkbox"
  />
  <div
    class="switch"
  >
    <span
      class="thumb"
    />
  </div>
  <label
    class="label"
  >
    click here
  </label>
</div>
`;
